@@ -82,7 +82,11 @@ Detailed Change List
 
 New Features
 ----------------------
+
 * SOLR-5130: Implement addReplica Collections API (Noble Paul)
+
+* SOLR-5183: JSON updates now support nested child documents using a 
+  "_childDocument_" object key.  (Varun Thacker, hossman)
 
 Bug Fixes
 ----------------------
